--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -11,6 +11,8 @@
     background: #1b1b2b;
     text-align: center;
     font-family: 'Oswald', sans-serif;
+    margin: 0;
+    padding: 0;
   }
   
   h1 {
@@ -58,6 +60,6 @@
   }
   
   .nav-ul li a:hover {
-    background: #555; /* Background color on hover */
+    background: #555; 
   }
   
