--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   text-transform: capitalize;
+  height: 100vh;
 }
 
 .home-container {
@@ -37,4 +38,12 @@ button:hover {
 
 p {
   color: #c0c0c0;
+}
+
+.event-detail-container {
+  padding: 0px 0px 200px;
+}
+
+.createevent-container {
+  padding: 0px 0px 325px;
 }
