--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,13 +1,14 @@
 footer {
-    font-size: 8px;
-    color: #fff;
-    clear: both;
-    display: block;
-    letter-spacing: 5px;
-    border: 1px solid #fff;
-    padding: 5px;
-    text-decoration: none;
-    width: 210px;
-    margin: auto;
-    
-  }
+  font-size: 8px;
+  color: #fff;
+  clear: both;
+  display: block;
+  letter-spacing: 5px;
+  border: 1px solid #fff;
+  padding: 5px;
+  text-decoration: none;
+  width: 210px;
+  margin: auto;
+  background-color: whitesmoke;
+  padding-top: 20px;
+}
