--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: #1b1b2b;
+  background-color: #323232;
   text-align: center;
   font-family: "Oswald", sans-serif;
   margin: 0;
@@ -15,8 +15,9 @@ body {
 }
 
 h1 {
-  color: #c0c0c0;
+  color: black;
   font-weight: 100;
+  margin: 10px;
 }
 
 .nav {
